# 42-A_maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  lucas.txt  mazegen-1.0.0-py3-none-any.whl  output.txt  output_config.txt  output_maze.txt  pyproject.toml  requirements.txt
animation/: __init__.py  firework.py  lose.py
config/: __init__.py  parsing_config.py  terminal_config.py  writer.py
mazegen/: README.md  __init__.py
mazegen.egg-info/: PKG-INFO  SOURCES.txt
mazegen/generator/: maze_generator.py  solver.py  writer.py
src/: a-maze-ing.py  parsing.py  parsing_config.py  parsing_maze.py
src/mazegen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
